# python-drf-exam

./: .env  .env.example  .gitignore  Dockerfile  README.md  car-sale-platform.postman_collection.json  data.sql  docker-compose.yml  pyproject.toml  schema.sql
backend/apps/auth/: serializers.py  views.py
backend/apps/auto_salon/: filter.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/auto_salon_listings/: apps.py  consumers.py  filter.py  models.py  permissions.py  routing.py  serializers.py  urls.py  views.py
backend/apps/base_account/: apps.py  models.py
backend/apps/car_brand/: apps.py  filter.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/car_model/: filter.py  models.py  serializers.py  urls.py  views.py
backend/apps/invitation_to_auto_salon/: apps.py  consumers.py  models.py  permissions.py  routing.py  urls.py  (+2 more)
backend/configs/: asgi.py  celery.py  routing.py  settings.py  settings_test.py  urls.py
backend/core/: pagination.py  test_runner.py
backend/templates/: account_deleted.html  auto_salon_listing_add.html  auto_salon_listing_deleted.html  blocked_auto_salon_listing.html  blocked_listing.html  create_admin.html  create_auto_salon.html  create_premium_account.html  delete_auto_salon.html  delete_invitation.html  join_request_approved_email.html  join_request_email.html  listing_deleted.html  register.html  role_deleted.html  seller_create.html  seller_deleted.html
client/: asset-manifest.json  index.html
frontend/: package-lock.json  package.json
frontend/src/: app.css  index.js
(+134 files in other folders)
